data/derived/sp14/progs/unify/prog1081.ml.out
Characters 15-19:
  let _ = build (rand, 3);;
                 ^^^^
Error: This expression has type int * int -> int * int -> int
       but an expression was expected of type int -> int -> int
       Type int * int is not compatible with type int 
